--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
       <td><h1>Shambhavi sengar💚</h1>
         <p><em>Student of <strong><a href="https://targetstudy.com/courses/be-information-science-engineering.html"> B.E information science</a> </strong> </em></p>
         <p>
-        I am very punctual and like to do my all works throughout the
-         day at right time. I love to eat simple and healthy food. I like dancing, reading books,
-          playing badminton and cooking in my spare time. 
-          I never bunk my classes and attend every class.</p></td>
+        I love exploring new things. have keen interest in web developement.
+          </p></td>
     </tr>
   </table>
     
